# cct-seiya-kumada

./: .gitignore  README.md
aic/: check_before_push.sh
aic/src/: main.py
ar/src/: main.py
central_limit_theory/: pyproject.toml
central_limit_theory/src/: main.py
dbscan/: pyproject.toml
dbscan/src/: execute_dbscan.py
deep_face/: .gitignore  myrun.sh  pyproject.toml
deep_face/src/: main.py  main_with_gpt4o.py  prompt.py
deep_translator_trial/: pyproject.toml
deep_translator_trial/src/: main.py  main_2.py
earth_movers_distance/: earth_movers_distance.sln
earth_movers_distance/emd/: emd.cpp  emd.h  emd.vcxproj  emd.vcxproj.filters  main.cpp
earth_movers_distance/python/: main.py
elyza_llma/src/: main_2.ipynb  main_2.py  main_3.py
farthest_point_sampling/FarthestPointSampling/: FarthestPointSampling.sln
farthest_point_sampling/FarthestPointSampling/FarthestPointSampling/: FarthestPointSampling.vcxproj  FarthestPointSampling.vcxproj.filters  main.cpp  viewer.cpp  viewer.h
gaussian_process/src/: main.py  main_base.py  main_with_deep_learning.py  main_with_gpytorch.py  main_with_pymc3.py  numpyro_model.py  pyro_model.py  pytorch_model.py  util.py
generics_partial_specialization_in_rust/cpp/: generics_partial_specialization_in_rust.sln
generics_partial_specialization_in_rust/cpp/generics_partial_specialization_in_rust/: generics_partial_specialization_in_rust.vcxproj  (+3 more)
ginza_nlp/: pyproject.toml
ginza_nlp/outputs/: output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt
ginza_nlp/src/: main.py
interpolation/image_processing/: Cargo.toml
jax/: check_format.sh  regression_with_jax.py  regression_with_pytorch.py
lang_extract/: .gitignore  main.py  pyproject.toml
levelset/src/: init_level_set.py  main.py
ma/: .flake8
ma/src/: main.py
monty_hall_problem/: check_before_push.sh  mypy.ini  mypy.txt
monty_hall_problem/src/: answerer.py  chairperson.py  main.py  problem.py
nerf/: .flake8  mypy.ini  run_draw_rendering_region  run_generate_points  run_predict  run_predict_rotation  run_train
nerf/doc/: README.md
nerf/src/: camera.py  draw_rendering_region.py  generate_points.py  nerf.py  nerf_loss.py  predict.py  predict_rotation.py  radiance_fields.py  rendering.py  train.py
new_pi_formulation/: .gitignore  pyproject.toml
new_pi_formulation/src/: main.py
openai_agents_trial/: .gitignore  pyproject.toml
openai_agents_trial/src/: main_01.py  main_02.py  main_03.py  main_04.py  main_05.py  main_06.py
opencv_book/: '  opencv_book.sln
opencv_book/ch03/: 3_1.cpp  3_1.h  3_2.cpp  3_2.h  3_3.cpp  3_3.h  3_4.cpp  3_4.h  3_5.cpp  3_5.h  4_3.cpp  4_3.h  7_2.cpp  7_2.h  7_3.cpp  7_3.h  7_5.cpp  7_5.h  7_6.cpp  7_6.h  7_7.cpp  7_7.h  8_2.cpp  8_2.h  CropLayer.cpp  CropLayer.h  TextDetector.cpp  TextDetector.h  TextRecognizer.cpp  TextRecognizer.h  ch03.vcxproj  ch03.vcxproj.filters  main.cpp  output.xml  util.cpp  util.h
opencv_koneta/opencv_koneta/: opencv_koneta.sln
quantum_phase_estimation/: main.py  mypy.ini  quantum_phase_estimation.py  量子位相推定.ipynb
rembg_sample/: .gitignore  pyproject.toml
rembg_sample/doc/: README.md
rembg_sample/src/: main.py
sarima/: pyproject.toml
sarima/data/: co2_monthave_ryo.csv  co2_monthave_ryo_concated.csv
sarima/src/: convert_data.py  create_src_graph.py  main.ipynb  main2.ipynb  main3.ipynb  utils.py
state_space/: .flake8
state_space/src/: sample.ipynb
structured_outputs/: .gitignore  pyproject.toml
structured_outputs/src/: main.py  main_2.py  main_3.py  main_4.py  main_5.py  utils.py
tensor_network/: myrun.bat
tensor_network/src/: main.py  main_2.py  tensor_network_layer.py  tensor_network_layer_for_mnist.py
time_series/: myrun.bat
time_series/src/: main.ipynb  main_for_blog.ipynb  optimize_model.py  pre_analysis.py  predict.py  train.py  utils.py
xgboost_with_missing_value/: myrun.sh  pyproject.toml
xgboost_with_missing_value/src/: inject_missing_values.py  main.py
(+15 files in other folders)
