[tool.poetry]
name = "central-limit-theory"
version = "0.1.0"
description = ""
authors = ["Seiya Kumada <seiya.kumada@cct-inc.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
