[tool.poetry]
name = "deep-face"
version = "0.1.0"
description = ""
authors = ["Seiya Kumada <seiya.kumada@cct-inc.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
deepface = "^0.0.93"
tf-keras = "^2.17.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
