[tool.poetry]
name = "deep-translator-trial"
version = "0.1.0"
description = ""
authors = ["Seiya <seiya.kumada@cct-inc.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
