[tool.poetry]
name = "openai-agents-trial"
version = "0.1.0"
description = ""
authors = ["Seiya <seiya.kumada@cct-inc.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
openai-agents = "^0.0.4"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
