[tool.poetry]
name = "rembg-sample"
version = "0.1.0"
description = ""
authors = ["Seiya <seiya.kumada@cct-inc.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
llvmlite = "^0.43.0"
numba = "^0.60.0"
rembg = "^2.0.61"
onnxruntime = "^1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
