[tool.poetry]
name = "sarima"
version = "0.1.0"
description = ""
authors = ["Seiya Kumada <seiya.kumada@cct-inc.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
statsmodels = "^0.14.2"
pmdarima = "^2.0.4"
numpy = "1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
